# ibkr-tws-mcp

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: ci-cd.yml
src/ibkr_tws_mcp/: __init__.py  models.py  server.py  tools.py  tws_client.py  utils.py
tests/: __init__.py  conftest.py  test_server.py  test_tools.py  test_tws_client.py  test_utils.py
